swag anotation 수정
